# app/api/ngoView.py
@@ -2,6 +2,7 @@ from connexion import NoContent
 from flask import request, g
 from app.MethodView import SuperView
 import datetime
+import gridfs
 
 class NgoView(SuperView):
     """ Create NGO service
@@ -24,9 +25,17 @@ class NgoView(SuperView):
       return self.remove(ngoId)
 
     def get(self, ngoId):
-      return self.retrieve(ngoId)
+      return self.coordinates(ngoId) 
 
-    def search(self, city= None, name= None, requiredItem=None,lowerLimit=0, upperLimit=None):
+    def documents(self, ngoId):       #ngo/{ngoId} => POST  action => adds docs to database and stores the IDs in current ngos data
+      body = {}
+      files = request.files.to_dict()
+      for file in files:
+        grid = self.gfs.put(files[file], filename= ngoId + file)
+        body["documents." + file] = str(grid)
+      return self.update(ngoId, body)
+
+    def search(self, city= None, name= None, requiredItem=None,lowerLimit=0, upperLimit=None, latitude=80.5574,longitude=13.5655):
       body= {}
       if city:
         body["location.city"]= city
@@ -38,4 +47,5 @@ class NgoView(SuperView):
         body["numberOfPeopleStaying"]= {"$gt": lowerLimit}
       if upperLimit:
         body["numberOfPeopleStaying"]= {"$lt": upperLimit}  
+      
       return self.retrieveAll(body)
